# dd-cli

./: .flake8  .gitignore  Dockerfile  LICENSE.txt  Makefile  PLAN.md  README.md  RELEASING.md  dd-api.json  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  dd-import_example.yml  flake8_and_unit_tests.yml  release.yml
dd_import/: dd_api.py  dd_reimport_findings.py  environment.py
src/dd_cli/: __init__.py  __main__.py  client.py  errors.py  version.py
src/dd_cli/_client/: README.md  __init__.py
src/dd_cli/_client/api/announcements/: announcements_create.py  announcements_delete_preview_list.py  announcements_destroy.py  announcements_list.py  announcements_partial_update.py  announcements_retrieve.py  announcements_update.py
src/dd_cli/_client/api/api_token_auth/: api_token_auth_create.py
src/dd_cli/_client/api/asset_api_scan_configurations/: asset_api_scan_configurations_create.py  asset_api_scan_configurations_delete_preview_list.py  asset_api_scan_configurations_destroy.py  asset_api_scan_configurations_list.py  asset_api_scan_configurations_partial_update.py  asset_api_scan_configurations_retrieve.py  asset_api_scan_configurations_update.py
src/dd_cli/_client/api/asset_groups/: asset_groups_create.py  asset_groups_delete_preview_list.py  asset_groups_destroy.py  asset_groups_list.py  asset_groups_retrieve.py  asset_groups_update.py
src/dd_cli/_client/api/asset_members/: asset_members_create.py  asset_members_delete_preview_list.py  asset_members_destroy.py  asset_members_list.py  asset_members_retrieve.py  asset_members_update.py
src/dd_cli/_client/api/assets/: assets_create.py  assets_delete_preview_list.py  assets_destroy.py  assets_generate_report_create.py  assets_list.py  assets_partial_update.py  assets_retrieve.py  assets_update.py
src/dd_cli/_client/api/configuration_permissions/: configuration_permissions_list.py  configuration_permissions_retrieve.py
src/dd_cli/_client/api/credential_mappings/: credential_mappings_create.py  credential_mappings_delete_preview_list.py  credential_mappings_destroy.py  credential_mappings_list.py  credential_mappings_partial_update.py  credential_mappings_retrieve.py  credential_mappings_update.py
src/dd_cli/_client/api/credentials/: credentials_create.py  credentials_delete_preview_list.py  credentials_destroy.py  credentials_list.py  credentials_partial_update.py  credentials_retrieve.py  credentials_update.py
src/dd_cli/_client/api/development_environments/: development_environments_create.py  development_environments_delete_preview_list.py  development_environments_destroy.py  development_environments_list.py  development_environments_partial_update.py  development_environments_retrieve.py  development_environments_update.py
src/dd_cli/_client/api/dojo_group_members/: dojo_group_members_create.py  dojo_group_members_delete_preview_list.py  dojo_group_members_destroy.py  dojo_group_members_list.py  dojo_group_members_retrieve.py  dojo_group_members_update.py
src/dd_cli/_client/api/dojo_groups/: dojo_groups_create.py  dojo_groups_delete_preview_list.py  dojo_groups_destroy.py  dojo_groups_list.py  dojo_groups_partial_update.py  dojo_groups_retrieve.py  dojo_groups_update.py
src/dd_cli/_client/api/endpoint_meta_import/: endpoint_meta_import_create.py
src/dd_cli/_client/api/endpoint_status/: endpoint_status_create.py  endpoint_status_delete_preview_list.py  endpoint_status_destroy.py  endpoint_status_list.py  endpoint_status_partial_update.py  endpoint_status_retrieve.py  endpoint_status_update.py
src/dd_cli/_client/api/endpoints/: endpoints_create.py  endpoints_delete_preview_list.py  endpoints_destroy.py  endpoints_generate_report_create.py  endpoints_list.py  endpoints_partial_update.py  endpoints_retrieve.py  endpoints_update.py
src/dd_cli/_client/api/engagement_presets/: engagement_presets_create.py  engagement_presets_destroy.py  (+5 more)
src/dd_cli/_client/models/: __init__.py  accepted_risk_request.py  add_new_file_option_request.py  add_new_note_option_request.py  announcement.py  announcement_request.py  announcement_request_style.py  announcement_style.py  announcements_list_style.py  app_analysis.py  app_analysis_prefetch.py  app_analysis_prefetch_product.py  app_analysis_prefetch_user.py  app_analysis_request.py  asset.py  asset_api_scan_configuration.py  asset_api_scan_configuration_prefetch.py  asset_api_scan_configuration_prefetch_product.py  asset_api_scan_configuration_prefetch_tool_configuration.py  asset_api_scan_configuration_request.py  asset_api_scan_configurations_list_prefetch_item.py  asset_api_scan_configurations_retrieve_prefetch_item.py  asset_business_criticality_type_1.py  asset_business_criticality_type_2_type_1.py  asset_business_criticality_type_3_type_1.py  asset_group.py  asset_group_prefetch.py  asset_group_prefetch_group.py  asset_group_prefetch_product.py  asset_group_prefetch_role.py  asset_group_request.py  asset_groups_list_prefetch_item.py  asset_groups_retrieve_prefetch_item.py  asset_lifecycle_type_1.py  asset_lifecycle_type_2_type_1.py  asset_lifecycle_type_3_type_1.py  asset_member.py  asset_member_prefetch.py  asset_member_prefetch_product.py  asset_member_prefetch_role.py  (+837 more)
src/dd_cli/cli/: _resource.py  app.py  config_cmd.py  configure.py  dojo_groups.py  endpoints.py  engagements.py  finding_templates.py  findings.py  jira_instances.py  metadata.py  ping.py  product_types.py  products.py  risk_acceptances.py  tests_cmd.py  users.py
src/dd_cli/config/: __init__.py  legacy_env.py  paths.py  settings.py
src/dd_cli/output/: __init__.py  base.py  json_out.py  table.py  yaml_out.py
tests/: conftest.py  test_cli_action_verbs.py  test_cli_config.py  test_cli_configure.py  test_cli_ping.py  test_cli_resources.py  test_cli_resources_m2b.py  test_cli_writes.py  test_client.py  test_compat_env.py  test_config.py  test_errors.py  test_output.py  test_smoke.py
tests/__snapshots__/: test_cli_resources.ambr  test_cli_resources_m2b.ambr
tests/integration/: conftest.py  test_real_defectdojo.py
unittests/: test_api.py
(+359 files in other folders)
