[project]
name = "defectdojo-cli"
dynamic = ["version"]
description = "Production-grade CLI for managing DefectDojo"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Osama Mahmood", email = "osama.mahmood40@gmail.com" },
]
maintainers = [
    { name = "Osama Mahmood", email = "osama.mahmood40@gmail.com" },
]
keywords = ["defectdojo", "security", "appsec", "cli", "vulnerability-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "structlog>=24.1",
    "tomli-w>=1.0",
    "PyYAML>=6.0",
    "orjson>=3.10",
    # Required by the vendored generated client in src/dd_cli/_client/.
    "attrs>=23.2",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]
test = [
    "pytest>=8.2",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "syrupy>=4.6",
    "hypothesis>=6.100",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-click>=0.8",
    "mkdocstrings[python]>=0.25",
]
client-gen = [
    "openapi-python-client>=0.21",
]

[project.urls]
Homepage = "https://github.com/OsamaMahmood/dd-import-v2"
Repository = "https://github.com/OsamaMahmood/dd-import-v2"
Issues = "https://github.com/OsamaMahmood/dd-import-v2/issues"
Changelog = "https://github.com/OsamaMahmood/dd-import-v2/blob/main/CHANGELOG.md"

[project.scripts]
dd = "dd_cli.cli.app:main"
# Backward-compatibility shims for the legacy dd-import package. Wired in M4.
# dd-reimport-findings = "dd_cli.cli.legacy:dd_reimport_findings_main"
# dd-import-languages  = "dd_cli.cli.legacy:dd_import_languages_main"

[build-system]
requires = ["hatchling>=1.24", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

# Derive the package version from the latest git tag (`v0.3.0` → `0.3.0`).
# Untagged commits between tags get a dev version (`0.3.1.dev3+gabc1234`).
# Single source of truth (git), no pyproject.toml field to forget to bump.
# setuptools_scm (used by hatch-vcs) strips the `v` prefix automatically.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
# Bake the resolved version into the installed package as `_version.py`,
# so `python -c "import dd_cli; print(dd_cli.__version__)"` works on a
# wheel install where the .git directory is absent.
version-file = "src/dd_cli/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dd_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "src/dd_cli",
    "README.md",
    "LICENSE.txt",
    "CHANGELOG.md",
    "PLAN.md",
]
exclude = [
    "src/dd_cli/_version.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["src/dd_cli/_client", "src/dd_cli/_version.py", "dd_import"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "C4",   # comprehensions
    "PT",   # pytest style
    "TID",  # tidy imports
]
ignore = [
    "E501",  # line-too-long (formatter handles it)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
# `tests_cmd.py` triggers ruff's pytest-style rules because the file name
# matches `tests_*.py`. This is CLI code for `dd tests`, not a test module.
# Using `**/tests_cmd.py` so the pattern matches regardless of the working
# directory ruff is invoked from.
"**/tests_cmd.py" = ["PT"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = [
    "src/dd_cli/_client/",
    "dd_import/",
    "unittests/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = "dd_cli._client.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Integration tests need a live DefectDojo and are excluded from the default
# `pytest` run. Use `make smoke` (or `pytest -m integration`) to run them.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m",
    "not integration",
    "--cov=dd_cli",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "integration: tests that require a live DefectDojo instance",
    "compat: backward-compatibility tests for the dd-import contract",
]

[tool.coverage.run]
source = ["dd_cli"]
branch = true
omit = [
    "*/dd_cli/_client/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false
