[metadata]
name = dd-import
version = 0.1.0
author = Osama Mahmood
author_email = osama.mahmood40@gmail.com
maintainer = Osama Mahmood
maintainer_email = osama.mahmood40@gmail.com
description = A utility to (re-)import findings and language data into DefectDojo
# Originally created by Stefan Fleckenstein at MaibornWolff GmbH
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OsamaMahmood/dd-import-v2
project_urls =
    Issue Tracker = https://github.com/OsamaMahmood/dd-import-v2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    dd_import = dd_import
packages = dd_import
python_requires = >=3.9
install_requires =
    requests>=2.32.0

[options.packages.find]
where = dd_import

[options.entry_points]
console_scripts =
    dd-reimport-findings = dd_import.dd_reimport_findings:dd_reimport_findings
    dd-import-languages = dd_import.dd_import_languages:dd_import_languages
